--- a/view/magento_product_type_tree.xml
+++ b/view/magento_product_type_tree.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <!-- This file is part magento_product module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<tryton>
-    <data>
-
-    </data>
-</tryton>
+<tree string="Magento Product Type">
+    <field name="name"/>
+    <field name="code"/>
+    <field name="active"/>
+</tree>
