--- a/view/magento_app_form.xml
+++ b/view/magento_app_form.xml
@@ -8,8 +8,12 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
             <separator string="Products" colspan="4" id="products"/>
             <button name="core_import_product_type" string="Import Product Type" colspan="4"/>
             <button name="core_import_group_attributes" string="Import Group Attributes" colspan="4"/>
-            <button name="core_import_categories" string="Import Magento Categories" colspan="4"/>
-            <group col="6" colspan="1" id="products">
+            <group col="6" colspan="4" id="categories">
+                <button name="core_import_categories" string="Import Magento Categories"/>
+                <label name="category_root_id"/>
+                <field name="category_root_id"/>
+            </group>
+            <group col="6" colspan="4" id="products">
                 <button name="core_import_products" string="Import/Update Magento Products"/>
                 <label name="from_products"/>
                 <field name="from_products"/>
