--- a/view/magento_app_form.xml
+++ b/view/magento_app_form.xml
@@ -3,22 +3,37 @@
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath
+        expr="/form/notebook/page[@id='general']/field[@name='product_options']"
+        position="after">
+            <label name="template_mapping"/>
+            <field name="template_mapping"/>
+            <label name="product_mapping"/>
+            <field name="product_mapping"/>
+            <label name="tax_include"/>
+            <field name="tax_include"/>
+    </xpath>
+    <xpath
         expr="/form/notebook/page[@id='import']/button[@name='core_customer_group']"
         position="after">
             <separator string="Products" colspan="4" id="products"/>
             <button name="core_import_product_type" string="Import Product Type" colspan="4"/>
             <button name="core_import_group_attributes" string="Import Group Attributes" colspan="4"/>
-            <group col="6" colspan="4" id="categories">
-                <button name="core_import_categories" string="Import Magento Categories"/>
+            <group col="5" colspan="4" id="categories">
+                <button name="core_import_categories" string="Import/Update Magento Categories"/>
                 <label name="category_root_id"/>
                 <field name="category_root_id"/>
             </group>
-            <group col="6" colspan="4" id="products">
-                <button name="core_import_products" string="Import/Update Magento Products"/>
-                <label name="from_products"/>
-                <field name="from_products"/>
-                <label name="to_products"/>
-                <field name="to_products"/>
+            <group col="4" colspan="4" id="products">
+                <button name="core_import_products" string="Import/Update Magento Products" colspan="4"/>
+                <newline/>
+                <label name="from_id_products"/>
+                <field name="from_id_products"/>
+                <label name="to_id_products"/>
+                <field name="to_id_products"/>
+                <label name="from_date_products"/>
+                <field name="from_date_products"/>
+                <label name="to_date_products"/>
+                <field name="to_date_products"/>
             </group>
             <button name="core_import_images" string="Import Magento Images" colspan="4"/>
     </xpath>
