--- a/view/sale_shop_form.xml
+++ b/view/sale_shop_form.xml
@@ -4,7 +4,7 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
 <data>
     <xpath
         expr="/form/notebook/page[@id='esale']/notebook/page[@id='configuration']"
-        position="inside">
+        position="before">
         <page string="Magento Product" col="4" id="magento-product" states="{'invisible': Not(Equal(Eval('esale_shop_app'), 'magento'))}">
             <label name="magento_group_price"/>
             <field name="magento_group_price"/>
