--- a/view/magento_attribute_configurable_form.xml
+++ b/view/magento_attribute_configurable_form.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <!-- This file is part magento_product module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<tree string="Magento Product Type">
+<form string="Magento Attribute Configurable">
+    <label name="name"/>
     <field name="name"/>
-    <field name="code"/>
-    <field name="active" tree_invisible="1"/>
-</tree>
+    <label name="mgn_id"/>
+    <field name="mgn_id"/>
+    <label name="active"/>
+    <field name="active"/>
+</form>
