--- a/view/magento_attribute_configurable_tree.xml
+++ b/view/magento_attribute_configurable_tree.xml
@@ -3,6 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <tree string="Magento Attribute Configurable">
     <field name="name"/>
+    <field name="code"/>
     <field name="mgn_id"/>
     <field name="active" tree_invisible="1"/>
 </tree>
