Change single Attributes Configurable to multiple

--- a/view/esale_template_form.xml
+++ b/view/esale_template_form.xml
@@ -9,7 +9,13 @@ The COPYRIGHT file at the top level of this repository contains the full copyrig
             <field name="magento_product_type"/>
             <label name="magento_group_price"/>
             <field name="magento_group_price"/>
-            <label name="magento_attribute_configurable"/>
-            <field name="magento_attribute_configurable"/>
+    </xpath>
+    <xpath
+        expr="/form/notebook/page[@id='esale']/notebook/page[@id='esale-general']"
+        position="after">
+            <page string="Attribute Configurables" col="4" id="magento-attribute-configurables"
+                states="{'invisible': Not(Equal(Eval('magento_product_type'), 'configurable'))}">
+                <field name="magento_attribute_configurables" colspan="4"/>
+            </page>
     </xpath>
 </data>
