--- a/view/magento_attribute_configurable_tree.xml
+++ b/view/magento_attribute_configurable_tree.xml
@@ -2,6 +2,7 @@
 <!-- This file is part magento_product module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <tree string="Magento Attribute Configurable">
+    <field name="app"/>
     <field name="name"/>
     <field name="code"/>
     <field name="mgn_id"/>
