Menu form view. Remove states (invisible when not magento_id)

--- a/view/menu_form.xml
+++ b/view/menu_form.xml
@@ -3,7 +3,7 @@
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/notebook" position="inside">
-        <page string="Magento" id="magento" states="{'invisible': ~Eval('magento_id')}">
+        <page string="Magento" id="magento">
             <label name="magento_app"/>
             <field name="magento_app"/>
             <label name="magento_id"/>
