--- a/view/magento_attribute_configurable_form.xml
+++ b/view/magento_attribute_configurable_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part magento_product module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<form string="Magento Attribute Configurable">
+<form>
     <label name="app"/>
     <field name="app"/>
     <label name="name"/>
