--- a/view/magento_sale_shop_group_price_tree.xml
+++ b/view/magento_sale_shop_group_price_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part magento_product module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<tree string="Magento Sale Shop Group Price">
+<tree>
     <field name="group"/>
     <field name="price_list"/>
     <field name="shop"/>
